starstream-compiler/src/parser/snapshots/starstream_compiler__parser__program__tests__conditional_program.snap
---
source: starstream-compiler/src/parser/program.rs
description: "Code:\n\nlet flag = true;\nif (flag) { let answer = 42; } else { answer = 0; }\n"
---
Program {
    statements: [
        VariableDeclaration {
            mutable: false,
            name: Identifier {
                name: "flag",
                span: Some(
                    4..8,
                ),
            },
            value: Spanned {
                node: Literal(
                    Boolean(
                        true,
                    ),
                ),
                span: 11..15,
            },
        },
        If {
            branches: [
                (
                    Spanned {
                        node: Identifier(
                            Identifier {
                                name: "flag",
                                span: Some(
                                    21..25,
                                ),
                            },
                        ),
                        span: 21..25,
                    },
                    Block {
                        statements: [
                            VariableDeclaration {
                                mutable: false,
                                name: Identifier {
                                    name: "answer",
                                    span: Some(
                                        33..39,
                                    ),
                                },
                                value: Spanned {
                                    node: Literal(
                                        Integer(
                                            42,
                                        ),
                                    ),
                                    span: 42..44,
                                },
                            },
                        ],
                    },
                ),
            ],
            else_branch: Some(
                Block {
                    statements: [
                        Assignment {
                            target: Identifier {
                                name: "answer",
                                span: Some(
                                    55..61,
                                ),
                            },
                            value: Spanned {
                                node: Literal(
                                    Integer(
                                        0,
                                    ),
                                ),
                                span: 64..65,
                            },
                        },
                    ],
                },
            ),
        },
    ],
}
