starstream-compiler/src/parser/snapshots/starstream_compiler__parser__program__tests__enum_definition.snap
---
source: starstream-compiler/src/parser/program.rs
description: "Code:\n\nenum Message {\n    Ping,\n    Pong(i64),\n}\n"
---
Program {
    definitions: [
        Enum(
            EnumDef {
                name: Identifier {
                    name: "Message",
                    span: Some(
                        5..12,
                    ),
                },
                variants: [
                    EnumVariant {
                        name: Identifier {
                            name: "Ping",
                            span: Some(
                                19..23,
                            ),
                        },
                        payload: [],
                    },
                    EnumVariant {
                        name: Identifier {
                            name: "Pong",
                            span: Some(
                                29..33,
                            ),
                        },
                        payload: [
                            TypeAnnotation {
                                name: Identifier {
                                    name: "i64",
                                    span: Some(
                                        34..37,
                                    ),
                                },
                                generics: [],
                            },
                        ],
                    },
                ],
            },
        ),
    ],
}
