starstream-compiler/src/parser/snapshots/starstream_compiler__parser__program__tests__multiple_functions.snap
---
source: starstream-compiler/src/parser/program.rs
description: "Code:\n\nfn main() {\n    let flag = true;\n    if (flag) { return; } else { return; }\n}\n\nfn compute() -> i64 {\n    let base = 41;\n    base + 1\n}\n"
---
Program {
    definitions: [
        Function(
            FunctionDef {
                export: None,
                name: Identifier {
                    name: "main",
                    span: Some(
                        3..7,
                    ),
                },
                params: [],
                return_type: None,
                body: Block {
                    statements: [
                        VariableDeclaration {
                            mutable: false,
                            name: Identifier {
                                name: "flag",
                                span: Some(
                                    20..24,
                                ),
                            },
                            ty: None,
                            value: Spanned {
                                node: Literal(
                                    Boolean(
                                        true,
                                    ),
                                ),
                                span: 27..31,
                            },
                        },
                    ],
                    tail_expression: Some(
                        Spanned {
                            node: If {
                                branches: [
                                    (
                                        Spanned {
                                            node: Identifier(
                                                Identifier {
                                                    name: "flag",
                                                    span: Some(
                                                        41..45,
                                                    ),
                                                },
                                            ),
                                            span: 41..45,
                                        },
                                        Block {
                                            statements: [
                                                Return(
                                                    None,
                                                ),
                                            ],
                                            tail_expression: None,
                                        },
                                    ),
                                ],
                                else_branch: Some(
                                    Block {
                                        statements: [
                                            Return(
                                                None,
                                            ),
                                        ],
                                        tail_expression: None,
                                    },
                                ),
                            },
                            span: 37..76,
                        },
                    ),
                },
            },
        ),
        Function(
            FunctionDef {
                export: None,
                name: Identifier {
                    name: "compute",
                    span: Some(
                        82..89,
                    ),
                },
                params: [],
                return_type: Some(
                    TypeAnnotation {
                        name: Identifier {
                            name: "i64",
                            span: Some(
                                95..98,
                            ),
                        },
                        generics: [],
                    },
                ),
                body: Block {
                    statements: [
                        VariableDeclaration {
                            mutable: false,
                            name: Identifier {
                                name: "base",
                                span: Some(
                                    109..113,
                                ),
                            },
                            ty: None,
                            value: Spanned {
                                node: Literal(
                                    Integer(
                                        41,
                                    ),
                                ),
                                span: 116..118,
                            },
                        },
                    ],
                    tail_expression: Some(
                        Spanned {
                            node: Binary {
                                op: Add,
                                left: Spanned {
                                    node: Identifier(
                                        Identifier {
                                            name: "base",
                                            span: Some(
                                                124..128,
                                            ),
                                        },
                                    ),
                                    span: 124..129,
                                },
                                right: Spanned {
                                    node: Literal(
                                        Integer(
                                            1,
                                        ),
                                    ),
                                    span: 131..132,
                                },
                            },
                            span: 124..132,
                        },
                    ),
                },
            },
        ),
    ],
}
