starstream-compiler/src/parser/snapshots/starstream_compiler__parser__program__tests__struct_definition.snap
---
source: starstream-compiler/src/parser/program.rs
description: "Code:\n\nstruct Point {\n    x: i64,\n    y: i64,\n}\n"
---
Program {
    definitions: [
        Struct(
            StructDef {
                name: Identifier {
                    name: "Point",
                    span: Some(
                        7..12,
                    ),
                },
                fields: [
                    StructField {
                        name: Identifier {
                            name: "x",
                            span: Some(
                                19..20,
                            ),
                        },
                        ty: TypeAnnotation {
                            name: Identifier {
                                name: "i64",
                                span: Some(
                                    22..25,
                                ),
                            },
                            generics: [],
                        },
                    },
                    StructField {
                        name: Identifier {
                            name: "y",
                            span: Some(
                                31..32,
                            ),
                        },
                        ty: TypeAnnotation {
                            name: Identifier {
                                name: "i64",
                                span: Some(
                                    34..37,
                                ),
                            },
                            generics: [],
                        },
                    },
                ],
            },
        ),
    ],
}
