starstream-compiler/src/parser/snapshots/starstream_compiler__parser__program__tests__utxo_storage.snap
---
source: starstream-compiler/src/parser/program.rs
description: "Code:\n\nutxo MyUtxo {\n    storage {\n        let data: i64;\n    }\n}\n"
---
Program {
    definitions: [
        Utxo(
            UtxoDef {
                name: Identifier {
                    name: "MyUtxo",
                    span: Some(
                        5..11,
                    ),
                },
                parts: [
                    Storage(
                        [
                            UtxoGlobal {
                                name: Identifier {
                                    name: "data",
                                    span: Some(
                                        40..44,
                                    ),
                                },
                                ty: TypeAnnotation {
                                    name: Identifier {
                                        name: "i64",
                                        span: Some(
                                            46..49,
                                        ),
                                    },
                                    generics: [],
                                },
                            },
                        ],
                    ),
                ],
            },
        ),
    ],
}
